--- a/package.json
+++ b/package.json
@@ -41,6 +41,11 @@
     "grunt": "~0.4.4"
   },
   "devDependencies": {
-    "grunt-contrib-concat": "~0.4.0"
+    "grunt-contrib-concat": "~0.4.0",
+    "chai": "~1.9.1",
+    "sinon": "~1.9.1",
+    "grunt-mocha-test": "~0.10.2",
+    "sweet.js": "~0.5.0",
+    "grunt-sweet.js": "~0.1.4"
   }
 }
