--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "sinon": "~1.9.1",
     "grunt-mocha-test": "~0.10.2",
     "sweet.js": "~0.5.0",
-    "grunt-sweet.js": "~0.1.4"
+    "grunt-sweet.js": "~0.1.4",
+    "should": "~3.3.1"
   }
 }
